CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(LP_NAMER)


MESSAGE("CMAKE_BINARY_DIR : ${CMAKE_BINARY_DIR}")
MESSAGE("CMAKE_SOURCE_DIR : ${CMAKE_SOURCE_DIR}")

SET(EXECUTABLE_OUTPUT_PATH	${CMAKE_BINARY_DIR})
SET(   LIBRARY_OUTPUT_PATH	${CMAKE_BINARY_DIR})

IF( WIN32 )
#	SET( CMAKE_CONFIGURATION_TYPES "Debug;Release;" CACHE STRING "limited configs" FORCE)
#	SET( CMAKE_CXX_FLAGS_DEBUG          "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1" )
#	SET( CMAKE_CXX_FLAGS_RELEASE        "/MT /O2 /Ob2 /D NDEBUG")

#	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_DEBUG")
ELSE()
#	SET ( CMAKE_BUILD_TYPE "RELEASE"     )
#	SET ( CMAKE_BUILD_TYPE "DEBUG"     )
#	IF( WITH_DEBUG )
#		SET ( CMAKE_BUILD_TYPE "DEBUG"     )
#	ELSE( WITH_DEBUG )GENDIOR
#		SET ( CMAKE_BUILD_TYPE "RELEASE"     )
#	ENDIF( WITH_DEBUG )
#	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -DNDEBUG")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC" )
#	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-conversion -Wno-sign-compare")
#	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-strict-aliasing -Wno-unused-parameter")
ENDIF( WIN32 )

INCLUDE_DIRECTORIES(		
	src_cpp
	$ENV{XPRESSDIR}/include
	)
FILE(
	GLOB
	LP_NAMER_FILES
	./src_cpp/*.cpp
	./src_cpp/*.hpp
	./src_cpp/*.h
	./src_cpp/*.hxx
	)
ADD_EXECUTABLE(lp_namer ${LP_NAMER_FILES})
IF(WIN32)
	TARGET_LINK_LIBRARIES(lp_namer $ENV{XPRESSDIR}/lib/xprb.lib $ENV{XPRESSDIR}/lib/xprs.lib )
ELSE(WIN32)
        TARGET_LINK_LIBRARIES(lp_namer $ENV{XPRESSDIR}/lib/libxprb.so $ENV{XPRESSDIR}/lib/libxprs.so)
ENDIF(WIN32)

